# tandorost-platform

./: .env.development  .env.production  .gitignore  Dockerfile  dependeny_manager.py  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy-prod.yml
app/: .gitignore  dependeny_manager.py  main.py
app/domain_models/: __init__.py  archive_user_images_response.py  bmi_level.py  cafe_bazzar_payment.py  data_models.py  exceptions.py  fitness_data.py  food_ai_model.py  nutrition_requrement.py  response_model.py  user_update_request.py  verification_code.py  verification_type.py
app/locales/: commands
app/protected_assets/: .gitignore  404.html
app/utility/: __init__.py  accept_language.py  auth_middleware.py  constants.py  decode_jwt_user_id.py  envirement_variables.py  generate_translation_keys.py  rate_limiter.py  translation_keys.py  (+1 more)
data/: sample.py
domain_models/: __init__.py  archive_user_images_response.py  cafe_bazzar_payment.py  data_models.py  exceptions.py  fitness_data.py  food_ai_model.py  nutrition_requrement.py  pydantic_object_id.py  response_model.py  token.py  user.py  user_bio_data.py  user_bio_data_request.py  user_files.py  user_static_files_request.py  user_static_files_response.py  user_update_request.py  verification_code.py  verification_type.py
locales/: commands
utility/: __init__.py  accept_language.py  auth_middleware.py  constants.py  decode_jwt_user_id.py  envirement_variables.py  rate_limiter.py  translation_keys.py  translation_utils.py
(+163 files in other folders)
